@@ -1,7 +1,5 @@
 import QtQuick 2.0
-//import QtQuick.Controls 1.1
-//import QtQuick.Dialogs 1.1
-//import QtQuick.Window 2.0
+import "Assets"
 
 Rectangle {
     id: root
